--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>FOOTBALL</title>
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <!--link rel="stylesheet" href="style.css"-->
     <script
       src="https://code.jquery.com/jquery-3.2.1.js"
