--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="utf-8">
     <title>FOOTBALL</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
-    <!--link rel="stylesheet" href="style.css"-->
+    <link rel="stylesheet" href="css/styles.css">
     <script
       src="https://code.jquery.com/jquery-3.2.1.js"
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous">
     </script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,900" rel="stylesheet">
     <script src="js/script.js"></script>
   </head>
   <body>
-    <h1> FOOTBALL </h1>
-    <h1 id="key">date</h1>
-    <p id="key">key</p>
-    <p id="name">name</p>
-    <p id="code">code</p>
+    <h1 id="title">The Football AI</h1>
+    <p id="comingsoon">Content will be with you momentarily, please stand by.</p>
   </body>
 </html>
