--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,900" rel="stylesheet">
     <script src="js/script.js"></script>
+    <script src="js/teamarray.js"></script>
   </head>
   <body>
     <h1 id="title">The Football AI</h1>
@@ -37,6 +38,7 @@
             </select>
           </p>
           <button onclick="getScore();">Go</button>
+          <button onclick="testArray();">Test Array</button>
         </div>
       </div>
     </div>
