--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           <p>Team:
             <select id="teamselect">
               <option value="0">Arsenal</option>
-              <option value="1">Manchester United</option>
+              <option value="1">Bournemouth</option>
+              <option value="2">Burnley</option>
+              <option value="3">Chelsea</option>
             </select>
           </p>
           <button onclick="getScore();">Go</button>
