--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <h1 id="title">The Football AI</h1>
-    <p id="comingsoon">Content will be with you momentarily, please stand by.</p>
+    <p id="comingsoon">Content will be with you momentarily, please stand by. love will</p>
 
     <div class="columns">
       <div class="column is-half is-offset-one-quarter">
