--- a/index.html
+++ b/index.html
@@ -29,6 +29,43 @@
               <option value="1">2</option>
               <option value="2">3</option>
               <option value="3">4</option>
+              <option value="4">5</option>
+              <option value="5">6</option>
+              <option value="6">7</option>
+              <option value="7">8</option>
+              <option value="8">9</option>
+              <option value="9">10</option>
+              <option value="10">11</option>
+              <option value="11">12</option>
+              <option value="12">13</option>
+              <option value="13">14</option>
+              <option value="14">15</option>
+              <option value="15">16</option>
+              <option value="16">17</option>
+              <option value="17">18</option>
+              <option value="18">19</option>
+              <option value="19">20</option>
+              <option value="20">21</option>
+              <option value="21">22</option>
+              <option value="22">23</option>
+              <option value="23">24</option>
+              <option value="24">25</option>
+              <option value="25">26</option>
+              <option value="26">27</option>
+              <option value="27">28</option>
+              <option value="28">29</option>
+              <option value="29">30</option>
+              <option value="30">31</option>
+              <option value="31">32</option>
+              <option value="32">33</option>
+              <option value="33">34</option>
+              <option value="34">35</option>
+              <option value="35">36</option>
+              <option value="36">37</option>
+              <option value="37">38</option>
+              <option value="38">39</option>
+              <option value="39">40</option>
+
             </select>
           </p>
           <p>Team:
@@ -37,6 +74,23 @@
               <option value="1">Bournemouth</option>
               <option value="2">Burnley</option>
               <option value="3">Chelsea</option>
+              <option value="4">Crystal Palace</option>
+              <option value="5">Everton</option>
+              <option value="6">Hull City</option>
+              <option value="7">Leicester City</option>
+              <option value="8">Liverpool</option>
+              <option value="9">Manchester City</option>
+              <option value="10">Manchester United</option>
+              <option value="11">Middlesbrough</option>
+              <option value="12">Southampton</option>
+              <option value="13">Stoke City</option>
+              <option value="14">Sunderland</option>
+              <option value="15">Swansea</option>
+              <option value="16">Tottenham Hotspur</option>
+              <option value="17">Watford</option>
+              <option value="18">West Bromwich Albion</option>
+              <option value="19">West Ham United</option>
+
             </select>
           </p>
           <button onclick="getScore();">Go</button>
