--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FOOTBALL</title>
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <link rel="stylesheet" href="css/styles.css">
@@ -9,16 +10,14 @@
       src="https://code.jquery.com/jquery-3.2.1.js"
       integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
       crossorigin="anonymous">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.css" />
     </script>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <script src="js/script.js"></script>
     <script src="js/teamarray.js"></script>
   </head>
   <body>
     <h1 id="title">The Football AI</h1>
     <p id="comingsoon">Content will be with you momentarily, please stand by.</p>
-
     <div class="columns">
       <div class="column is-half is-offset-one-quarter">
         <div class="container">
@@ -29,6 +28,42 @@
               <option value="1">2</option>
               <option value="2">3</option>
               <option value="3">4</option>
+              <option value="4">5</option>
+              <option value="5">6</option>
+              <option value="6">7</option>
+              <option value="7">8</option>
+              <option value="8">9</option>
+              <option value="9">10</option>
+              <option value="10">11</option>
+              <option value="11">12</option>
+              <option value="12">13</option>
+              <option value="13">14</option>
+              <option value="14">15</option>
+              <option value="15">16</option>
+              <option value="16">17</option>
+              <option value="17">18</option>
+              <option value="18">19</option>
+              <option value="19">20</option>
+              <option value="20">21</option>
+              <option value="21">22</option>
+              <option value="22">23</option>
+              <option value="23">24</option>
+              <option value="24">25</option>
+              <option value="25">26</option>
+              <option value="26">27</option>
+              <option value="27">28</option>
+              <option value="28">29</option>
+              <option value="29">30</option>
+              <option value="30">31</option>
+              <option value="31">32</option>
+              <option value="32">33</option>
+              <option value="33">34</option>
+              <option value="34">35</option>
+              <option value="35">36</option>
+              <option value="36">37</option>
+              <option value="37">38</option>
+              <option value="38">39</option>
+              <option value="39">40</option>
             </select>
           </p>
           <p>Team:
@@ -37,14 +72,34 @@
               <option value="1">Bournemouth</option>
               <option value="2">Burnley</option>
               <option value="3">Chelsea</option>
+              <option value="4">Crystal Palace</option>
+              <option value="5">Everton</option>
+              <option value="6">Hull City</option>
+              <option value="7">Leicester City</option>
+              <option value="8">Liverpool</option>
+              <option value="9">Manchester City</option>
+              <option value="10">Manchester United</option>
+              <option value="11">Middlesbrough</option>
+              <option value="12">Southampton</option>
+              <option value="13">Stoke City</option>
+              <option value="14">Sunderland</option>
+              <option value="15">Swansea</option>
+              <option value="16">Tottenham Hotspur</option>
+              <option value="17">Watford</option>
+              <option value="18">West Bromwich Albion</option>
+              <option value="19">West Ham United</option>
             </select>
           </p>
           <button onclick="getScore();">Go</button>
-
           <br>
-
+          <div class="spinner" id="spinner">
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+            <div class="rect5"></div>
+          </div>
           <h4 id="result"></h4>
-
         </div>
       </div>
     </div>
