--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <script src="js/script.js"></script>
+    <script src="js/script2.js"></script>
     <script src="js/teamarray.js"></script>
   </head>
   <body>
@@ -31,7 +32,7 @@
               <option value="4">5</option>
               <option value="5">6</option>
               <option value="6">7</option>
-              <option value="7">8</option>
+              <!--option value="7">8</option>
               <option value="8">9</option>
               <option value="9">10</option>
               <option value="10">11</option>
@@ -63,7 +64,7 @@
               <option value="36">37</option>
               <option value="37">38</option>
               <option value="38">39</option>
-              <option value="39">40</option>
+              <option value="39">40</option-->
             </select>
           </p>
           <p>Team:
@@ -91,6 +92,7 @@
             </select>
           </p>
           <button onclick="getScore();">Go</button>
+          <button onclick="test();">Test</button>
           <br>
           <div class="spinner" id="spinner">
             <div class="rect1"></div>
