--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     </script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <script src="js/script.js"></script>
-    <script src="js/script2.js"></script>
-    <script src="js/teamarray.js"></script>
+    <script src="js/arraystorage.js"></script>
   </head>
   <body>
     <h1 id="title">The Football AI</h1>
@@ -32,6 +31,7 @@
               <option value="4">5</option>
               <option value="5">6</option>
               <option value="6">7</option>
+              <!-- The below options will be available once or if the dataset is completed. -->
               <!--option value="7">8</option>
               <option value="8">9</option>
               <option value="9">10</option>
@@ -92,7 +92,6 @@
             </select>
           </p>
           <button onclick="getScore();">Go</button>
-          <button onclick="test();">Test</button>
           <br>
           <div class="spinner" id="spinner">
             <div class="rect1"></div>
@@ -101,7 +100,11 @@
             <div class="rect4"></div>
             <div class="rect5"></div>
           </div>
-          <h4 id="result"></h4>
+          <div id="resultContainer">
+            <h4 id="result"></h4><br>
+            <button onclick="tweetLogic();">Tweet about it!</button>
+            <p id="tweet"></p>
+          </div>
         </div>
       </div>
     </div>
