--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
           <label><input type="checkbox" id="chkproperty" name="matchday" value="true" checked> Use live matchday stats</label><br>
           <p>Matchday:
             <select id="matchdaycustom">
-              <option value="0">1</option>
-              <option value="1">2</option>
-              <option value="2">3</option>
-              <option value="3">4</option>
-              <option value="4">5</option>
-              <option value="5">6</option>
-              <option value="6">7</option>
+              <option value = 0>1</option>
+              <option value = 1>2</option>
+              <option value = 2>3</option>
+              <option value = 3>4</option>
+              <option value = 4>5</option>
+              <option value = 5>6</option>
+              <option value = 6>7</option>
               <!-- The below options will be available once or if the dataset is completed. -->
               <!--option value="7">8</option>
               <option value="8">9</option>
