--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <option value = 3>4</option>
               <option value = 4>5</option>
               <option value = 5>6</option>
-              <option value = 6>7</option>
+              <option value = 6 selected="selected">7</option>
               <!-- The below options will be available once or if the dataset is completed. -->
               <!--option value="7">8</option>
               <option value="8">9</option>
